
SET(MIA_HEADERS core.hh 2d.hh 3d.hh)

IF (WIN32)
ADD_SUBDIRECTORY(core ${OUTPUT_ROOT})
ADD_SUBDIRECTORY(2d   ${OUTPUT_ROOT})
ADD_SUBDIRECTORY(3d   ${OUTPUT_ROOT})
ADD_SUBDIRECTORY(mesh ${OUTPUT_ROOT})
ELSE (WIN32)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(2d  )
ADD_SUBDIRECTORY(3d  )
ADD_SUBDIRECTORY(mesh)
ENDIF(WIN32)


INSTALL(FILES ${MIA_HEADERS}
		DESTINATION "${INCLUDE_INSTALL_PATH}/mia")

